Updating file structure and moving data to constants.js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <title>Simple ToDo App</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
@@ -88,8 +89,8 @@
               </template>
             </ul>
           </section>
-          <script src="./pages/index.js" defer></script>
-          <script src="./scripts/validate.js" defer></script>
+          <script src="./pages/index.js" type="module"></script>
+          <!-- <script src="./scripts/validate.js" defer></script> -->
         </main>
       </div>
     </div>
